--- a/views/styles/navbar.css
+++ b/views/styles/navbar.css
@@ -12,6 +12,7 @@ body {
 
 #navbar-container {
   display: unset;
+  width: 100vw;
 }
 
 #pre-nav {
